updated app name in manifest

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Kimai2 app for YunoHost",
+    "name": "Kimai2",
     "id": "kimai2",
     "packaging_format": 1,
     "description": {
