--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
     "packaging_format": 1,
     "description": {
         "en": "Kimai2 package for YunoHost.",
-        "fr": "Kimai2 de package d’application pour YunoHost."
+        "fr": "Kimai2 de package d’application pour YunoHost.",
+        "de": "Kimai 2 Paket für YunoHost."
     },
     "version": "0.3",
     "url": "https://v2.kimai.org",
@@ -30,16 +31,18 @@
                 "type": "domain",
                 "ask": {
                     "en": "Choose a domain name for Kimai2",
-                    "fr": "Choisissez un nom de domaine pour Kimai2"
+                    "fr": "Choisissez un nom de domaine pour Kimai2",
+                    "de": "wählen Sie einen Domainnamen für Kimai 2"
                 },
-                "example": "example.com"
+                "example": "kimai2.example.com"
             },
             {
                 "name": "admin",
                 "type": "user",
                 "ask": {
                     "en": "Choose an admin user (should be a YunoHost registered user).",
-                    "fr": "Choisissez l’administrateur (should be a YunoHost registered user)."
+                    "fr": "Choisissez l’administrateur (should be a YunoHost registered user).",
+                    "de": "Wählen Sie einen Admin Benutzer (sollte ein registrierter YunoHost Benutzer sein)."
                 },
                 "example": "johndoe"
             },
@@ -48,7 +51,8 @@
                 "type": "boolean",
                 "ask": {
                     "en": "Is it a public application?",
-                    "fr": "Est-ce une application publique ?"
+                    "fr": "Est-ce une application publique ?",
+                    "de": "Ist dies eine öffentliche Applikation?"
                 },
                 "default": true
             }
