--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,7 @@
                 "ask": {
                     "en": "Choose a domain name for Kimai2",
                     "fr": "Choisissez un nom de domaine pour Kimai2",
-                    "de": "wählen Sie einen Domainnamen für Kimai 2"
+                    "de": "Wählen Sie einen Domainnamen für Kimai 2"
                 },
                 "example": "kimai2.example.com"
             },
