--- a/conf/.env
+++ b/conf/.env
@@ -4,10 +4,11 @@
 
 # KIMAI DEFAULT ENV VARS
 DATABASE_PREFIX=kimai2_
+MAILER_FROM=admin@__DOMAIN__
 
 ###> symfony/framework-bundle ###
 APP_ENV=prod
-APP_SECRET=random_key
+APP_SECRET=__RANDOM_KEY__
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
@@ -16,7 +17,7 @@ APP_SECRET=random_key
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data/kimai.sqlite"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-#DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+# DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/kimai.sqlite
 ###< doctrine/doctrine-bundle ###
 
