Add smtp option in .env

--- a/conf/.env
+++ b/conf/.env
@@ -25,5 +25,5 @@ DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/kimai.sqlite
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://localhost:25
 ###< symfony/swiftmailer-bundle ###
