--- a/conf/.env
+++ b/conf/.env
@@ -17,8 +17,8 @@ APP_SECRET=__RANDOM_KEY__
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data/kimai.sqlite"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-# DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
-DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/kimai.sqlite
+DATABASE_URL=mysql://__DB_USER__:__DB_PASSWORD__@127.0.0.1:3306/__DB_NAME__
+# DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/kimai.sqlite
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
