--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,35 +1,33 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+root __FINALPATH__/public/ ;
+
 location __PATH__/ {
 
   # Path to source
-  alias __FINALPATH__/public/;
-  
+  # alias __FINALPATH__/public/ ;
+
   # Force usage of https
   if ($scheme = http) {
     rewrite ^ https://$server_name$request_uri? permanent;
   }
 
-  index index.php index.htm index.html;
+  index index.php;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   #client_max_body_size 50M;
 
-  try_files $uri $uri/ @kimai;
-  location ~ \.php {
+  try_files $uri $uri/ /index.php$is_args$args;
+  location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php7.3-fpm-__NAME__.sock;
 
     fastcgi_index index.php;
     include fastcgi_params;
-    fastcgi_param REMOTE_USER     $remote_user;
-    fastcgi_param PATH_INFO       $fastcgi_path_info;
+    fastcgi_param REMOTE_USER $remote_user;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
     fastcgi_param SCRIPT_FILENAME $request_filename;
   }
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
-}
-
-location @kimai {
-    rewrite /(.*)$ /index.php?/$1 last;
 }
