--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
     "id": "kimai2",
     "packaging_format": 1,
     "description": {
-        "en": "A multi-user application for time-tracking with support for mobile devices",
-        "fr": "Une application web de suivi du temps, multi-utilisateurs, et compatible avec les appareils mobiles",
-        "de": "Eine web-basierte Mehrbenutzer-Zeiterfassung mit Rechnungsdruck mit Unterstützung für mobile Endgeräte",
+        "en": "Multi-user application for time-tracking with support for mobile devices",
+        "fr": "Application web de suivi du temps, multi-utilisateurs, et compatible avec les appareils mobiles",
+        "de": "Web-basierte Mehrbenutzer-Zeiterfassung mit Rechnungsdruck mit Unterstützung für mobile Endgeräte",
         "cs": "Víceuživatelská webová aplikace pro sledování času s podporou mobilních zařízení"
     },
     "version": "1.14.3~ynh1",
@@ -15,12 +15,12 @@
         "name": "Anmol Sharma"
     },
     "requirements": {
-        "yunohost": ">= 4.0.0"
+        "yunohost": ">= 4.2.4"
     },
     "multi_instance": true,
     "services": [
         "nginx",
-        "php7.0-fpm",
+        "php7.3-fpm",
         "mysql"
     ],
     "arguments": {
@@ -33,8 +33,7 @@
                     "fr": "Choisissez un nom de domaine pour Kimai2",
                     "de": "Wählen Sie einen Domainnamen für Kimai2",
                     "cs": "Zvolte doménu pro Kimai2"
-                },
-                "example": "kimai2.example.com"
+                }
             },
             {
                 "name": "admin",
@@ -44,8 +43,7 @@
                     "fr": "Choisissez l’administrateur (should be a YunoHost registered user).",
                     "de": "Wählen Sie einen Admin Benutzer (sollte ein registrierter YunoHost Benutzer sein).",
                     "cs": "Zvolte administrátora (musí to být registrovaný uživatel YunoHostu)."
-                },
-                "example": "johndoe"
+                }
             },
             {
                 "name": "is_public",
