--- a/conf/.env.mysql
+++ b/conf/.env.mysql
@@ -13,7 +13,7 @@ APP_SECRET=__RANDOM_KEY__
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data/kimai.sqlite"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://__DB_NAME__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__
+DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__
 # DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/kimai.sqlite
 ###< doctrine/doctrine-bundle ###
 
