--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,13 @@
     },
     "version": "1.15.2~ynh1",
     "url": "https://www.kimai.org",
+    "upstream": {
+        "license": "MIT",
+        "website": "https://www.kimai.org",
+        "demo": "https://www.kimai.org/demo/",
+        "admindoc": "https://www.kimai.org/documentation",
+        "code": "https://github.com/kevinpapst/kimai2"
+    },
     "license": "MIT",
     "maintainer": {
         "name": "Anmol Sharma",
