--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "kimai2",
     "packaging_format": 1,
     "description": {
-        "en": "A multi-user application for time-tracking with support for mobile devices",
-        "fr": "Une application web de suivi du temps, multi-utilisateurs, et compatible avec les appareils mobiles",
+        "en": "Multi-user application for time-tracking with support for mobile devices",
+        "fr": "Application web de suivi du temps, multi-utilisateurs, et compatible avec les appareils mobiles",
         "de": "Eine web-basierte Mehrbenutzer-Zeiterfassung mit Rechnungsdruck mit Unterstützung für mobile Endgeräte",
         "cs": "Víceuživatelská webová aplikace pro sledování času s podporou mobilních zařízení"
     },
