--- a/conf/local.yaml
+++ b/conf/local.yaml
@@ -10,6 +10,7 @@ kimai:
     user:
         registration: "__REGISTRATION__"
     ldap:
+        activate: true
         # more infos about the connection params can be found at:
         # https://docs.laminas.dev/laminas-ldap/api/
         connection:
@@ -109,7 +110,7 @@ kimai:
             attributes:
                 # The following 2 rules are automatically prepended and can be overwritten.
                 # Username is set to the value of the configured "usernameAttribute" field 
-                - { ldap_attr: "usernameAttribute", user_method: "setUsername" }
+                - { ldap_attr: "uid", user_method: "setUsername" }
                 # Only applied if you don't configure a mapping for setEmail()
                 - { ldap_attr: "mail", user_method: "setEmail" }
                 # An example which will set the display name in Kimai from the 
