--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,17 +1,15 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-root __FINALPATH__/public/ ;
-
 location __PATH__/ {
 
   # Path to source
-  # alias __FINALPATH__/public/ ;
+  alias __FINALPATH__/public/;
 
-  index index.php;
+  index index.html index.php;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   #client_max_body_size 50M;
 
-  try_files $uri $uri/ /index.php$is_args$args;
+  try_files $uri $uri/ /__PATH__/index.php;
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
