--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,9 @@
             },
             {
                 "name": "path",
-                "type": "path"
+                "type": "path",
+                    "example": "/kimai",
+                    "default": "/kimai"
             },
             {
                 "name": "admin",
