--- a/conf/.env.example
+++ b/conf/.env.example
@@ -1,36 +1,22 @@
-# This file is a "template" of which env vars need to be defined for your application
-# Copy this file to .env file for development, create environment variables when deploying to production
-# https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
+# Configure your database connection and set the correct server version:
+# for MySQL "serverVersion=5.7" and for MariaDB "serverVersion=mariadb-10.5.8"
+DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__?charset=utf8&serverVersion=mariadb-10.5.12
 
-###> symfony/framework-bundle ###
-APP_ENV=prod
-APP_SECRET=__RANDOM_KEY__
-#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
-#TRUSTED_HOSTS=localhost,example.com
-###< symfony/framework-bundle ###
-
-###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For a MySQL database, use: "mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=10.2.12&charset=utf8"
-# For a MariaDB database, use: "mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=mariadb-10.2.12"
-# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data/kimai.sqlite"
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__
-# DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/kimai.sqlite
-###< doctrine/doctrine-bundle ###
-
-###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
-###< nelmio/cors-bundle ###
-
-### Email configuration
-# SMTP: smtp://localhost:25?encryption=&auth_mode=
-# Google: gmail://username:password@default
-# Amazon: ses://ACCESS_KEY:SECRET_KEY@default?region=eu-west-1
-# Mailchimp: mandrill://KEY@default
-# Mailgun: mailgun://KEY:DOMAIN@default
-# Postmark: postmark://ID@default
-# Sendgrid: sendgrid://KEY@default
-# Disable emails: null://null
-MAILER_URL=smtp://localhost:25?encryption=&auth_mode=
+# Email will be sent with this address as sender
 MAILER_FROM=admin@__DOMAIN__
+
+# Email connection (disabled by default) more info at https://www.kimai.org/documentation/emails.html
+MAILER_URL=smtp://localhost:25?encryption=&auth_mode=
+
+# do not change, unless you are developing for Kimai
+APP_ENV=prod
+
+# should be changed to a unique character sequence
+APP_SECRET=__RANDOM_KEY__
+
+# unlikely, that you need to change this one
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+
+# Running behind reverse proxies? Use those:
+TRUSTED_PROXIES=127.0.0.1
+TRUSTED_HOSTS=localhost,__DOMAIN__
