--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,4 @@
-#sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
+location / {
 
   # Path to source
   alias __FINALPATH__/public/;
@@ -9,7 +8,7 @@ location __PATH__/ {
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
   #client_max_body_size 50M;
 
-  try_files $uri $uri/ /__PATH__/index.php;
+  try_files $uri $uri/ /index.php;
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
