--- a/conf/local.yaml
+++ b/conf/local.yaml
@@ -7,6 +7,7 @@ security:
         secured_area:
             kimai_ldap: ~
 kimai:
+    data_dir: "__DATADIR__"
     user:
         registration: __REGISTRATION__
     ldap:
