--- a/conf/local.yaml
+++ b/conf/local.yaml
@@ -112,12 +112,12 @@ kimai:
             attributes:
                 # The following 2 rules are automatically prepended and can be overwritten.
                 # Username is set to the value of the configured "usernameAttribute" field 
-                - { ldap_attr: "uid", user_method: "setUsername" }
+                - { ldap_attr: "uid", user_method: setUsername }
                 # Only applied if you don't configure a mapping for setEmail()
-                - { ldap_attr: "mail", user_method: "setEmail" }
+                - { ldap_attr: "mail", user_method: setEmail }
                 # An example which will set the display name in Kimai from the 
                 # value of the "common name" field in your LDAP
-                - { ldap_attr: "cn", user_method: "setAlias" }
+                - { ldap_attr: "cn", user_method: setAlias }
 
         # You can comment the following section, if you don't want to manage
         # user roles in Kimai via LDAP groups. If you want to use the group
@@ -135,8 +135,8 @@ kimai:
             # The following example rule will be expanded to (for user "foo"):
             # (&(&(objectClass=groupOfNames))(member=foo))
             # default: empty
-            filter: "(&(|(objectclass=posixAccount))(uid={{username}})(permission=cn=__APP__.main,ou=permission,dc=yunohost,dc=org))"
-              
+            filter: "(&(objectClass=posixGroup)(cn=__APP__*))"
+
             # The following field is taken from the LDAP user entry and its 
             # value is used in the filter above as "valueOfUsernameAttribute".
             # The attribute must be given in lowercase!
