--- a/config_panel.toml
+++ b/config_panel.toml
@@ -11,5 +11,5 @@ name = "Kimai2 configuration"
         type = "boolean"
         yes = "true"
 		no = "false"
-        help = "Allow Kimai account creation"
+        help = "Allow Kimai2 account creation"
         bind = "registration:__FINALPATH__/config/packages/local.yaml"
