--- a/scripts/config
+++ b/scripts/config
@@ -17,6 +17,7 @@ ynh_abort_if_errors
 
 phpversion=$(ynh_app_setting_get --app=$app --key=phpversion)
 current_fpm_footprint=$(ynh_app_setting_get --app=$app --key=fpm_footprint)
+final_path=$(ynh_app_setting_get --app=$app --key=final_path)
 
 #=================================================
 # SPECIFIC GETTERS FOR TOML SHORT KEY
