--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-root __FINALPATH__/public/ ;
+root __INSTALL_DIR__/public/ ;
 
 location __PATH__/ {
 
