--- a/conf/.env
+++ b/conf/.env
@@ -1,21 +1,47 @@
-# Configure your database connection and set the correct server version:
-# for MySQL "serverVersion=5.7" and for MariaDB "serverVersion=mariadb-10.5.8"
+#
+# You should NOT use this file in production, but instead move the environment variables to your webserver configuration.
+# The .env file is only existing to simplify the initial setup!
+#
+
+#================================================================================
+# Configure your database connection and set the correct server version.
+#
+# You have to replace the following values with your defaults:
+# - the version "5.7" (the database server version, examples for MySQL and MariaDB below)
+# - the database username "user"
+# - the password "password" for "user"
+# - the database schema "database"
+# - you might have to adapt port "3306" and server IP "127.0.0.1" as well
+#
+# For MySQL that would be "serverVersion=5.7" as in:
+#    DATABASE_URL=mysql://user:password@127.0.0.1:3306/database?charset=utf8mb4&serverVersion=5.7
+#
+# For MariaDB it would be "serverVersion=mariadb-10.5.8":
+#    DATABASE_URL=mysql://user:password@127.0.0.1:3306/database?charset=utf8mb4&serverVersion=mariadb-10.5.8
+#
 DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__?charset=utf8&serverVersion=mariadb-10.5.12
 
-# Email will be sent with this address as sender
+#================================================================================
+# The full documentation can be found at https://www.kimai.org/documentation/emails.html
+#
+# Email will be sent with this address as sender:
 MAILER_FROM=admin@__DOMAIN__
-# Email connection (disabled by default) more info at https://www.kimai.org/documentation/emails.html
+# Email connection (disabled by default) - see documentation for the format
 MAILER_URL=smtp://localhost:25?encryption=&auth_mode=
 
+#================================================================================
 # do not change, unless you are developing for Kimai
 APP_ENV=prod
 
-# should be changed to a unique character sequence
+#================================================================================
+# should be changed to a unique character sequence, used for hashing cookies
 APP_SECRET=__RANDOM_KEY__
 
-# unlikely, that you need to change this one
-CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
-
-# Running behind reverse proxies? Use those:
+#================================================================================
+# Running behind reverse proxies? Try these:
 TRUSTED_PROXIES=127.0.0.1
 TRUSTED_HOSTS=localhost,__DOMAIN__
+
+#================================================================================
+# unlikely, that you need to change this one
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
