--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -6,9 +6,10 @@ location __PATH__/ {
   index index.php;
 
   # Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
-  #client_max_body_size 50M;
+  client_max_body_size 50M;
 
   try_files $uri $uri/ /index.php$is_args$args;
+
   location ~ [^/]\.php(/|$) {
     fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
