--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,8 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-root __INSTALL_DIR__/public/ ;
-
 location __PATH__/ {
+
+  # Path to source
+  alias __INSTALL_DIR__/public/;
 
   index index.php;
 
