--- a/conf/.env
+++ b/conf/.env
@@ -19,7 +19,7 @@
 # For MariaDB it would be "serverVersion=mariadb-10.5.8":
 #    DATABASE_URL=mysql://user:password@127.0.0.1:3306/database?charset=utf8mb4&serverVersion=mariadb-10.5.8
 #
-DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__?charset=utf8&serverVersion=mariadb-10.5.12
+DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__?charset=utf8mb4&serverVersion=mariadb-10.5.19
 
 #================================================================================
 # The full documentation can be found at https://www.kimai.org/documentation/emails.html
