--- a/tests.toml
+++ b/tests.toml
@@ -7,3 +7,9 @@ test_format = 1.0
     # -------------------------------
     
     args.registration = false
+
+    # -------------------------------
+    # Commits to test upgrade from
+    # -------------------------------
+
+    test_upgrade_from.8f44ac8fd4276c402c3cf68e373a6a3ff51e25b5.name = "Upgrade from 1.30"
