--- a/conf/.env
+++ b/conf/.env
@@ -27,7 +27,7 @@ DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__?charset=u
 # Email will be sent with this address as sender:
 MAILER_FROM=admin@__DOMAIN__
 # Email connection (disabled by default) - see documentation for the format
-MAILER_URL=smtp://localhost:25?encryption=&auth_mode=
+MAILER_URL="smtp://__APP__:__MAIL_PWD__@localhost:25?encryption=&auth_mode="
 
 #================================================================================
 # do not change, unless you are developing for Kimai
