--- a/conf/.env
+++ b/conf/.env
@@ -25,7 +25,7 @@ DATABASE_URL=mysql://__DB_USER__:__DB_PWD__@127.0.0.1:3306/__DB_NAME__?charset=u
 # The full documentation can be found at https://www.kimai.org/documentation/emails.html
 #
 # Email will be sent with this address as sender:
-MAILER_FROM=admin@__DOMAIN__
+MAILER_FROM=__APP__@__DOMAIN__
 # Email connection (disabled by default) - see documentation for the format
 MAILER_URL="smtp://__APP__:__MAIL_PWD__@127.0.0.1:25?encryption=&auth_mode="
 
