--- a/tests.toml
+++ b/tests.toml
@@ -4,6 +4,8 @@ test_format = 1.0
 
 [default]
 
+    exclude = ["change_url"]
+
     # -------------------------------
     # Default args to use for install
     # -------------------------------
