--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
-location __PATH__/ {
+root __INSTALL_DIR__/public/;
 
-  root __INSTALL_DIR__/public/;
+location __PATH__/ {
   
   index index.php;
 
@@ -11,7 +11,13 @@ location __PATH__/ {
   try_files $uri $uri/ /index.php$is_args$args;
 
   location ~ [^/]\.php(/|$) {
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
     fastcgi_pass unix:/var/run/php/php__PHP_VERSION__-fpm-__APP__.sock;
-    include fastcgi_params_no_auth;
+
+    fastcgi_index index.php;
+    include fastcgi_params;
+    fastcgi_param REMOTE_USER $remote_user;
+    fastcgi_param PATH_INFO $fastcgi_path_info;
+    fastcgi_param SCRIPT_FILENAME $request_filename;
   }
 }
