--- a/tests.toml
+++ b/tests.toml
@@ -4,8 +4,6 @@ test_format = 1.0
 
 [default]
 
-    exclude = ["change_url"]
-
     # -------------------------------
     # Default args to use for install
     # -------------------------------
@@ -16,4 +14,4 @@ test_format = 1.0
     # Commits to test upgrade from
     # -------------------------------
 
-    test_upgrade_from.8f44ac8fd4276c402c3cf68e373a6a3ff51e25b5.name = "Upgrade from 1.30"
+    #test_upgrade_from.8f44ac8fd4276c402c3cf68e373a6a3ff51e25b5.name = "Upgrade from 1.30"
